--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="required_id_number">Please enter valid ID number.</string>
     <string name="required_id_type">Please select the type of ID.</string>
     <string name="required_verification_code">Please enter the Verification Code.</string>
-    <string name="otp_not_match">You entered an incorrect OTP.</string>
+    <string name="otp_not_match">You entered an incorrect Verification Code.</string>
     <string name="select_your_country">Select your country</string>
     <string name="search_country">Search country</string>
     <string name="required_cancellation_reason">Write a reason for the cancellation.</string>
@@ -182,7 +182,7 @@
     <string name="set_up_pin">Setup PIN</string>
     <string name="current_login_pin">Current Login PIN</string>
     <string name="sent_pin_via_sms">We sent a SMS with the PIN to your registered mobile number and email address.</string>
-    <string name="sent_otp_via_sms">We sent a SMS with the OTP to your registered mobile number.</string>
+    <string name="sent_otp_via_sms">We sent a SMS with the Verification Code to your registered mobile number.</string>
 
     <!--Profile Section-->
     <string name="profile_information">Profile Information</string>
