--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,6 +303,7 @@
     <string name="middle_name">Middle Name</string>
     <string name="last_name">Last Name*</string>
     <string name="email">Email*</string>
+    <string name="email_">Email</string>
     <string name="edit_dob">Date of Birth</string>
     <string name="edit_marital_status">Marital Status</string>
     <string name="edit_mother_maiden_name">Mother\'s Maiden Name*</string>
