~ Text Added in Registration Process...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,11 +45,12 @@
     <string name="continue_to_register">Continue to Register</string>
     <string name="refer_to_otp">You should receive an email with Verification Code. Please enter the Verification Code to verify.</string>
     <string name="mobile_verification">Enter your mobile number, email address &amp; Continue. You will receive Verification Code in your email. Confirm the email address belongs to you by entering the Verification Code in next step.</string>
+    <string name="register_one_text">You may either want a social registration or enter your email address. If you enter your email address, you will receive a verification code in your email. Confirm that the email address is yours by entering the verification code in the next step.</string>
     <string name="email_verification">Enter your email address and continue. You will receive a verification code in your email. Confirm that the email address belongs to you by entering the code in the next step.</string>
     <string name="email_verification_code">Enter the verification code you have received at your registered email address. If you have not received a code yet, click on resend to get the code.</string>
     <string name="selfie_verification">A selfie - take a photograph of yourself and make sure that your face is clearly visible.</string>
-    <string name="email_selfie_verification">We sent you a Verification Code in your email in the previous step. You can edit your selfie and enter your name and the verification code to continue.</string>
-    <string name="identity_verification">To complete your registration with L-Pesa, kindly select an ID proof below and enter the ID number. Please have your selected ID card ready to take a photograph of it in the next step.</string>
+    <string name="email_selfie_verification">Enter your full name and continue. You can also edit your selfie.</string>
+    <string name="identity_verification">To complete your registration with L-Pesa, kindly select an ID proof below and enter the ID number. Please keep your selected ID card ready in hand.</string>
     <string name="identity_photo_verification">Take a photograph of your ID and make sure that your personal details are clear and easy to read.</string>
     <string name="no_location_detected">
         No location detected. Make sure location is enabled on the device.
@@ -512,6 +513,6 @@
     <string name="privacy_term_condition_login">By signing in you agree to Terms and Conditions and Privacy Policy</string>
 
     <!--New Registration-->
-    <string name="mobile_verification_title">Enter your Mobile Number and Continue.</string>
+    <string name="mobile_verification_title">Enter your mobile number and continue.</string>
     <string name="verification_code_one">Enter Verification Code</string>
 </resources>
