~ New version 1.0.17 update in play store.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,9 +198,9 @@
     <string name="resend_verification">Resend Verification Code</string>
     <string name="set_up_pin">Setup PIN</string>
     <string name="current_login_pin">Current Login PIN</string>
-    <string name="sent_pin_via_sms">We sent a SMS with the PIN to your registered email address.</string>
-    <string name="sent_otp_via_sms">We sent a SMS with verification code to your registered mobile number.</string>
-    <string name="sent_otp_via_email">We sent verification code to your registered email address.</string>
+    <string name="sent_pin_via_sms">We sent the PIN to your registered email address.</string>
+    <string name="sent_otp_via_sms">We sent a verification code to your registered mobile number.</string>
+    <string name="sent_otp_via_email">We sent a verification code to your registered email address.</string>
 
     <!--Profile Section-->
     <string name="profile_information">Profile Information</string>
