statement upload module p-1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -515,4 +515,13 @@
     <!--New Registration-->
     <string name="mobile_verification_title">Enter your mobile number and continue.</string>
     <string name="verification_code_one">Enter Verification Code</string>
+    <string name="Statement_info">Statement Information</string>
+    <string name="upload_pdf_statement">Please Upload correct pdf statement here</string>
+
+
+    <!--test items-->
+    <string-array name="statement_list">
+        <item>M-Paisa</item>
+        <item>Airtel Money</item>
+    </string-array>
 </resources>
