--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">L-Pesa</string>
     <!--   <string name="facebook_app_id">770436653385979</string>-->
-    <string name="facebook_app_id">377266739110350</string>
-    <string name="fb_login_protocol_scheme">fb377266739110350</string>
+   <!-- <string name="facebook_app_id">377266739110350</string>
+    <string name="fb_login_protocol_scheme">fb377266739110350</string>-->
+
+    <string name="facebook_app_id">304581870595435</string>
+    <string name="fb_login_protocol_scheme">fb304581870595435</string>
+
     <string name="starter_loan"> $1 Starter Loan</string>
     <string name="l_pesa_risk_free">The L-Pesa Risk Free</string>
     <string name="sign_in">Sign In</string>
