--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,8 +128,8 @@
     <string name="required_id_type">Please select the type of ID.</string>
     <string name="required_verification_code">Please enter the Verification Code.</string>
     <string name="otp_not_match">You entered an incorrect Verification Code.</string>
-    <string name="select_your_country">Select your country</string>
-    <string name="search_country">Search country</string>
+    <string name="select_your_country">Select your Country / region</string>
+    <string name="search_country">Search country / region</string>
     <string name="required_cancellation_reason">Write a reason for the cancellation.</string>
     <string name="required_reason_for_close_account">Required your valid reason.</string>
 
