--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -537,4 +537,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_item_dev">Developer Options</string>
+    <string name="ml_service_notification_desc">L-Pesa service will pull user location, email and sms from device and help better sugest loan based on pulled data with out saving in server directly.</string>
 </resources>
