--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -538,4 +538,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="nav_item_dev">Developer Options</string>
     <string name="ml_service_notification_desc">L-Pesa service will pull user location, email and sms from device and help better sugest loan based on pulled data with out saving in server directly.</string>
+
+    <string name="sasa_logo_url">https://play-lh.googleusercontent.com/nSizQBW5A6z19AHpKBYxKBoTLG9kQ9Sn80ixHpP7PgEmx1MJciKa002aFzYCxIjPpVs=s200-rw</string>
+
 </resources>
